# socket_can

./: CMakeLists.txt  README.md  USAGE_GUIDE.md  build_and_test.sh  run_can_tests.sh
include/socket_can/: epoll_event_loop.hpp  socket_can.hpp
src/: epoll_event_loop.cpp  socket_can.cpp
test/: CMakeLists.txt  can_monitor.cpp  can_read_write_test.cpp  can_reader_test.cpp  can_sender_test.cpp  integration_test.cpp  test_socket_can.cpp
